# mydwl

./: IM.h  README.md  autostart.sh  client.h  config.h  dwl copy.c  dwl-ipc-unstable-v2-protocol.c  dwl-ipc-unstable-v2-protocol.h  dwl.c  dwl.desktop  dwl1.0.c  meson.build  mydwl
fish/: config.fish  fish_variables
konsole/: Profile 1.profile  WhiteOnBlack.colorscheme
protocols/: meson.build
rofi/: networkmanager_dmenu
rofi/networkmanager-dmenu/: config.ini
scripts/: monitor.sh
swaync/: config.json  style.css
waybar/: config  style.css
wofi/: config  history_wofi.py  networkmanager_dmenu  orage.css  recentfile_wofi.py  style.css  style_big.css  yellow.css
wofi/network/: config.ini  networkmanager_dmenu
wofi/networkmanager-dmenu/: config.ini
